Adding test for depreacted keys

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -112,5 +112,12 @@ interface Ethernet9
    encapsulation vlan
       client dot1q outer 10 inner 12 network dot1q outer 20 inner 22
 !
+interface Ethernet10
+   description Test_for_type_routed
+   no switchport
+!
+interface Ethernet11
+   channel-group 16 mode active
+!
 ip community-list TEST1 permit 1000:1000
 ip community-list TEST2 permit 2000:3000
