--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
@@ -54,7 +54,9 @@ router_bgp:
           ecmp: true
           ecmp_limit: 20
       missing_policy:
-        direction_in_action: deny
+        direction_in:
+          action: deny
+          include_community_list: true
       next_hop_unchanged: true
     label_local_termination: implicit-null
     networks:
