Adding few changes to template.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -18,12 +18,14 @@ router bgp 65001
       neighbor FOOBAR activate
    !
    address-family ipv4 multicast
+      bgp additional-paths receive
       neighbor FOOBAR activate
    !
    address-family ipv6
       no neighbor FOOBAR activate
    !
    address-family ipv6 multicast
+      bgp additional-paths receive
       no neighbor FOOBAR activate
       redistribute isis rcf Router_BGP_Isis()
       redistribute ospf match internal
@@ -48,10 +50,11 @@ router bgp 65001
          bgp missing-policy direction out action permit
          bgp additional-paths install ecmp-primary
          bgp additional-paths receive
-         bgp additional-paths send ecmp limit 4 PL1
+         bgp additional-paths send ecmp limit 4
          neighbor 1.2.3.4 activate
          neighbor 1.2.3.4 route-map FOO in
          neighbor 1.2.3.4 route-map BAR out
+         neighbor 1.2.3.4 additional-paths send any
          network 2.3.4.0/24 route-map BARFOO
          no bgp redistribute-internal
          redistribute connected rcf VRF_AFIPV4_RCF_CONNECTED_1()
@@ -66,6 +69,7 @@ router bgp 65001
          bgp additional-paths receive
          neighbor 1.2.3.4 route-map FOO in
          neighbor 1.2.3.4 route-map BAR out
+         neighbor 1.2.3.4 additional-paths receive
          network 239.0.0.0/24 route-map BARFOO
          redistribute connected
          redistribute ospf match internal
@@ -116,4 +120,4 @@ router bgp 65001
       redistribute dynamic rcf VRF_RCF_DYNAMIC()
       !
       address-family ipv4
-         bgp additional-paths send ecmp PL1
+         bgp additional-paths send ecmp
