Feat(eos_cli_config_gen): add management_ssh authentication settings (protocol and empty-passwords)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-ssh.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-ssh.cfg
@@ -8,8 +8,10 @@ management ssh
    ip access-group ACL-SSH in
    ip access-group ACL-SSH-VRF vrf mgt in
    idle-timeout 15
+   authentication protocol keyboard-interactive password public-key
    connection limit 50
    connection per-host 10
+   authentication empty-passwords permit
    client-alive interval 666
    client-alive count-max 42
    fips restrictions
