Feat(eos_cli_config_gen): add management_ssh authentication settings (protocol and empty-passwords) - changes after review

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh.yml
@@ -1,7 +1,7 @@
 management_ssh:
   authentication:
     empty_passwords: permit
-    protocol:
+    protocols:
       - keyboard-interactive
       - password
       - public-key
