--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc2-leaf3b.arista.com.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc2-leaf3b.arista.com.yml
@@ -314,12 +314,10 @@ port_channel_interfaces:
   - MLAG
 - name: Port-Channel11
   description: dc2-leaf3-fw1_PortChannel
-  switchport:
-    enabled: true
-    mode: trunk
-    trunk:
-      vlans: 11-12,21-22
-      native_vlan: 4092
+  type: switched
+  mode: trunk
+  vlans: 11-12,21-22
+  native_vlan: 4092
   spanning_tree_portfast: edge
   mlag: 11
 ethernet_interfaces:
@@ -366,6 +364,7 @@ ethernet_interfaces:
   peer_interface: e1
   peer_type: firewall
   description: dc2-leaf3-fw1_e1
+  type: port-channel-member
   channel_group:
     id: 11
     mode: active
