--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
@@ -32,15 +32,23 @@ vrf instance MGMT
 vrf instance TEST_VRF
 !
 interface Port-Channel3
-   description TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1A_Po3
+   description TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1A_Eth3_Eth4_Po3
    no shutdown
    switchport
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1_CUSTOM_TEMPLATES_L2LEAF1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan none
+   switchport mode trunk
+   mlag 5
+!
 interface Port-Channel12
-   description TEST_CUSTOM_PREFIX_SERVER-2_portchannel
+   description TEST_CUSTOM_PREFIX_SERVER-2_data_portchannel_12
    no shutdown
    switchport
    switchport mode trunk
@@ -62,13 +70,23 @@ interface Ethernet4
    no shutdown
    channel-group 3 mode active
 !
+interface Ethernet5
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet2
+   no shutdown
+   channel-group 5 mode active
+!
+interface Ethernet6
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1B_Ethernet2
+   no shutdown
+   channel-group 5 mode active
+!
 interface Ethernet12
-   description TEST_CUSTOM_PREFIX_SERVER-2_Nic1
+   description TEST_CUSTOM_PREFIX_SERVER-2_Nic1_data
    no shutdown
    channel-group 12 mode active
 !
 interface Ethernet13
-   description TEST_CUSTOM_PREFIX_SERVER-2_Nic2
+   description TEST_CUSTOM_PREFIX_SERVER-2_Nic2_data
    no shutdown
    channel-group 12 mode active
 !
