--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1A.yml
@@ -177,13 +177,20 @@ vlan_interfaces:
   ip_address: 10.255.240.10/31
 port_channel_interfaces:
 - name: Port-Channel3
-  description: TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1B_Po3
+  description: TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1B_Eth3_Eth4_Po3
   type: switched
   shutdown: false
   mode: trunk
   trunk_groups:
   - LEAF_PEER_L3
   - MLAG
+- name: Port-Channel5
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1_CUSTOM_TEMPLATES_L2LEAF1
+  type: switched
+  shutdown: false
+  mode: trunk
+  vlans: none
+  mlag: 5
 ethernet_interfaces:
 - name: Ethernet3
   peer: CUSTOM-TEMPLATES-L3LEAF1B
@@ -214,11 +221,31 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 172.31.255.21/31
+- name: Ethernet5
+  peer: CUSTOM-TEMPLATES-L2LEAF1A
+  peer_interface: Ethernet1
+  peer_type: l2leaf
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet1
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 5
+    mode: active
+- name: Ethernet6
+  peer: CUSTOM-TEMPLATES-L2LEAF1B
+  peer_interface: Ethernet1
+  peer_type: l2leaf
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1B_Ethernet1
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 5
+    mode: active
 - name: Ethernet11
   peer: SERVER-1
   peer_interface: Nic1
   peer_type: server
-  description: TEST_CUSTOM_PREFIX_SERVER-1_Nic1
+  description: TEST_CUSTOM_PREFIX_SERVER-1_Nic1_management
   shutdown: false
   type: switched
   mode: trunk
