Fix(eos_designs): Fix context vars for custom interface description templates (#4429)
Co-authored-by: Carl Buchmann <carl.buchmann@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -185,6 +185,10 @@ all:
               hosts:
                 CUSTOM-TEMPLATES-L3LEAF1A:
                 CUSTOM-TEMPLATES-L3LEAF1B:
+            CUSTOM_TEMPLATES_L2LEAFS:
+              hosts:
+                CUSTOM-TEMPLATES-L2LEAF1A:
+                CUSTOM-TEMPLATES-L2LEAF1B:
         CUSTOM_PYTHON_MODULES_TESTS:
           children:
             CUSTOM_PYTHON_MODULES_SPINES:
