--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1B.yml
@@ -170,15 +170,22 @@ vlan_interfaces:
   ip_address: 10.255.240.11/31
 port_channel_interfaces:
 - name: Port-Channel3
-  description: TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1A_Po3
+  description: TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1A_Eth3_Eth4_Po3
   type: switched
   shutdown: false
   mode: trunk
   trunk_groups:
   - LEAF_PEER_L3
   - MLAG
+- name: Port-Channel5
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_To_Po1_CUSTOM_TEMPLATES_L2LEAF1
+  type: switched
+  shutdown: false
+  mode: trunk
+  vlans: none
+  mlag: 5
 - name: Port-Channel12
-  description: TEST_CUSTOM_PREFIX_SERVER-2_portchannel
+  description: TEST_CUSTOM_PREFIX_SERVER-2_data_portchannel
   type: switched
   shutdown: false
   mode: trunk
@@ -212,11 +219,31 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 172.31.255.23/31
+- name: Ethernet5
+  peer: CUSTOM-TEMPLATES-L2LEAF1A
+  peer_interface: Ethernet2
+  peer_type: l2leaf
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet2
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 5
+    mode: active
+- name: Ethernet6
+  peer: CUSTOM-TEMPLATES-L2LEAF1B
+  peer_interface: Ethernet2
+  peer_type: l2leaf
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1B_Ethernet2
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 5
+    mode: active
 - name: Ethernet12
   peer: SERVER-2
   peer_interface: Nic1
   peer_type: server
-  description: TEST_CUSTOM_PREFIX_SERVER-2_Nic1
+  description: TEST_CUSTOM_PREFIX_SERVER-2_Nic1_data
   shutdown: false
   type: port-channel-member
   channel_group:
@@ -226,7 +253,7 @@ ethernet_interfaces:
   peer: SERVER-2
   peer_interface: Nic2
   peer_type: server
-  description: TEST_CUSTOM_PREFIX_SERVER-2_Nic2
+  description: TEST_CUSTOM_PREFIX_SERVER-2_Nic2_data
   shutdown: false
   type: port-channel-member
   channel_group:
