Fix(eos_designs)!: BGP vlan config should not have redistribute igmp when belonging to a VRF with evpn multicast (#4210)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
@@ -228,6 +228,9 @@ tenants:
   # Tenant_C is for testing of EVPN L3/OISM only
   - name: Tenant_C
     mac_vrf_vni_base: 10000
+    evpn_l2_multicast:
+      enabled: False
+      underlay_l2_multicast_group_ipv4_pool: 236.0.0.0/20
     evpn_l3_multicast:
       # Enabled =
       #  - Enable multicast-routing on VRF
@@ -278,6 +281,18 @@ tenants:
                 ip_address: 10.1.14.5/24
               - node: EVPN-MULTICAST-L3LEAF3B
                 ip_address: 10.1.14.6/24
+          - id: 136
+            name: "L3_L2_MULTICAST_ENABLED_136"
+            enabled: true
+            evpn_l2_multicast:
+              enabled: true
+              always_redistribute_igmp: true
+          - id: 137
+            name: "L3_L2_MULTICAST_ENABLED_137"
+            enabled: true
+            evpn_l2_multicast:
+              enabled: true
+              always_redistribute_igmp: false
 
       - name: TEN_C_L3_MULTICAST_ENABLED_230_DISABLED_231
         description: "L3_MULTICAST_ENABLED_230_DISABLED_231"
