Feat(eos_cli_config_gen): Set ssh authentication protocols and empty password (#4436)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh.yml
@@ -1,4 +1,10 @@
 management_ssh:
+  authentication:
+    empty_passwords: permit
+    protocols:
+      - keyboard-interactive
+      - password
+      - public-key
   access_groups:
     - name: ACL-SSH
     - name: ACL-SSH-VRF
