Improve docs and change eos_cli_config_gen vars

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -28,13 +28,14 @@ dhcp-servers
 dot1x
 dot1x-2
 enable-password
+eos_cli_config_gen_configuration.enable
+eos_cli_config_gen_documentation.enable
 errdisable
 ethernet-interfaces
 event-handlers
 event-monitor
 flow-tracking
 flow-tracking-2
-generate_device_documentation
 generate-default-config
 groups
 hardware-counter
