--- a/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/inventory/group_vars/all.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/inventory/group_vars/all.yml
@@ -6,4 +6,5 @@ fabric_name: EOS_DESIGNS_DEPRECATED_VARS
 
 eos_designs_documentation:
   enable: false
-generate_device_documentation: false
+eos_cli_config_gen_documentation:
+  enable: false
