--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/all.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/all.yml
@@ -3,4 +3,5 @@ root_dir: '{{ playbook_dir }}'
 
 eos_designs_documentation:
   enable: false
-generate_device_documentation: false
+eos_cli_config_gen_documentation:
+  enable: false
