Deprecate address_family_evpn.bgp_additional_paths.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -141,9 +141,10 @@ router_bgp:
       import_ethernet_segment_ip_mass_withdraw: true
       export_ethernet_segment_ip_mass_withdraw: true
       import_overlay_index_gateway: true
-    bgp_additional_paths:
-      receive: true
-      send: any
+    bgp:
+      additional_paths:
+        receive: true
+        send: any
     layer_2_fec_in_place_update:
       enabled: true
   address_family_ipv4:
