added sflow knob for l3_interfaces

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
@@ -48,6 +48,9 @@ service routing protocols model multi-agent
 !
 hostname EVPN-MULTICAST-L3LEAF1A
 !
+sflow vrf sflowvrf destination 10.10.10.12 1234
+sflow run
+!
 no spanning-tree vlan-id 4093-4094
 !
 no enable password
@@ -321,6 +324,7 @@ interface Ethernet7
    vrf TEN_E_PEG_L3_MULTICAST_ENABLED
    ip address 10.1.51.0/31
    pim ipv4 sparse-mode
+   sflow enable
 !
 interface Ethernet8
    no shutdown
@@ -328,6 +332,7 @@ interface Ethernet8
    vrf TEN_E_L3_MULTICAST_ENABLED_PEG_OVERRIDE
    ip address 10.1.55.0/31
    pim ipv4 sparse-mode
+   sflow enable
 !
 interface Ethernet9
    no shutdown
@@ -335,6 +340,7 @@ interface Ethernet9
    vrf TEN_E_L3_MULTICAST_TRANSIT
    ip address 10.1.52.0/31
    pim ipv4 sparse-mode
+   sflow enable
 !
 interface Ethernet10
    no shutdown
@@ -342,6 +348,7 @@ interface Ethernet10
    vrf TEN_E_L3_MULTICAST_EVPN_PEG_RP_NODES
    ip address 10.1.60.0/31
    pim ipv4 sparse-mode
+   sflow enable
 !
 interface Loopback0
    description EVPN_Overlay_Peering
