--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/node-type-l3-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/node-type-l3-interfaces.cfg
@@ -7,6 +7,9 @@ service routing protocols model multi-agent
 !
 hostname node-type-l3-interfaces
 !
+sflow vrf sflowvrf destination 10.10.10.12 1234
+sflow run
+!
 spanning-tree mode none
 !
 no enable password
@@ -22,6 +25,7 @@ interface Ethernet1
    ip address 192.168.1.2/31
    service-policy type qos input TEST_POLICY
    service-profile TEST-QOS-PROFILE
+   sflow enable
    ! TEST RAW_EOS_CLI
 
 !
@@ -31,6 +35,7 @@ interface Ethernet2/2
    no switchport
    ip address dhcp
    dhcp client accept default-route
+   sflow enable
 !
 interface Ethernet42
    description This is a custom description
@@ -38,11 +43,13 @@ interface Ethernet42
    no switchport
    ip address dhcp
    dhcp client accept default-route
+   sflow enable
 !
 interface Ethernet43
    shutdown
    no switchport
    ip address 192.168.42.42/24
+   sflow enable
 !
 interface Loopback0
    description EVPN_Overlay_Peering
